--- a/app.json
+++ b/app.json
@@ -8,5 +8,6 @@
   "promptDelete": false,
   "alwaysUpdateLinks": true,
   "useMarkdownLinks": true,
-  "newLinkFormat": "relative"
+  "newLinkFormat": "relative",
+  "livePreview": false
 }
