--- a/workspace
+++ b/workspace
@@ -4,16 +4,50 @@
     "type": "split",
     "children": [
       {
-        "id": "b4e23148c694d1dd",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "work/resume.md",
-            "mode": "source",
-            "source": false
+        "id": "4dd83c35cb5b0446",
+        "type": "split",
+        "children": [
+          {
+            "id": "ce988f36be9afc5e",
+            "type": "split",
+            "dimension": 59.88142292490119,
+            "children": [
+              {
+                "id": "cd940fa99cf3a6cd",
+                "type": "leaf",
+                "state": {
+                  "type": "markdown",
+                  "state": {
+                    "file": "classes/csci-103/Untitled.md",
+                    "mode": "source",
+                    "source": true
+                  }
+                }
+              },
+              {
+                "id": "b4e23148c694d1dd",
+                "type": "leaf",
+                "state": {
+                  "type": "pdf",
+                  "state": {
+                    "file": "classes/phil-141/five-dialogues.pdf"
+                  }
+                }
+              }
+            ],
+            "direction": "vertical"
+          },
+          {
+            "id": "2990f4bfd50bf5fb",
+            "type": "leaf",
+            "dimension": 40.11857707509881,
+            "state": {
+              "type": "terminal",
+              "state": {}
+            }
           }
-        }
+        ],
+        "direction": "horizontal"
       }
     ],
     "direction": "vertical"
@@ -69,7 +103,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "work/resume.md",
+                "file": "classes/csci-103/Untitled.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -84,19 +118,20 @@
       }
     ],
     "direction": "horizontal",
-    "width": 228.66123962402344
+    "width": 228.66123962402344,
+    "collapsed": true
   },
-  "active": "b604b10cbac96163",
+  "active": "2990f4bfd50bf5fb",
   "lastOpenFiles": [
+    "classes/phil-141/five-dialogues.pdf",
+    "classes/csci-103/blown-to-bits.pdf",
+    "classes/csci-103/Untitled.md",
+    "classes/csci-103/textbook.md",
+    "work/resume.md",
     "Pasted image 20211018140723.png",
     "robotics/yog22-knowledge/software/people-to-ask-about-things/label-maker.md",
     "robotics/yog22-knowledge/software/people-to-ask-about-things/github-admin.md",
     "robotics/yog22-knowledge/software/processes/from-boot-to-build.md",
-    "robotics/yog22-knowledge/software/processes/adding-someone-to-github.md",
-    "robotics/yog22-knowledge/software/processes/first-commit.md",
-    "robotics/yog22-knowledge/software/processes/updating-ftc-sdk.md",
-    "robotics/yog22-knowledge/software/processes/preparing-next-years-repository.md",
-    "robotics/yog22-knowledge/software/processes/handing-down-software-manager.md",
-    "robotics/yog22-knowledge/software/processes/preparing-or-upgrading-phones.md"
+    "robotics/yog22-knowledge/software/processes/adding-someone-to-github.md"
   ]
 }
