--- a/appearance.json
+++ b/appearance.json
@@ -1,5 +1,8 @@
 {
-  "baseFontSize": 20,
+  "baseFontSize": 16,
   "theme": "moonstone",
-  "cssTheme": "Minimal"
+  "cssTheme": "Minimal",
+  "accentColor": "",
+  "translucency": false,
+  "monospaceFontFamily": "Fira Code Retina"
 }
